crates/test-files/fixtures/compile_errors/bad_ingot/src/main.fe
use foo::Foo
use bar::Baz

contract Bar:
    pub fn a() -> Foo:
        return Foo(my_u256=bool)
